fix spacing and padings . and correct arrows in ourser-landing

--- a/app/globals.css
+++ b/app/globals.css
@@ -426,7 +426,7 @@ body {
 
 .fun-card {
   width: 100%;
-  height: 800px;
+  height: 500px;
   max-width: 420px;
   
   overflow: hidden;
